@@ -1,5 +1,6 @@
 2010-12-30  Onur Küçük <onur@pardus.org.tr>
 	* bin/mudur.py: Add HU and RU locales.
+	* bin/update-fstab.py: Port to new parted (by Gökçen).
 
 2010-09-14  Ozan Çağlayan <ozan@pardus.org.tr>
 	* bin/mudur.py: Switch from sysklogd to rsyslog.
